# test using "pytest"
# build using "hatch build"
# publish using "hatch publish"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'benchmark-library'
version = '0.1.0'
requires-python = '>=3.10'
dependencies = [
    'Dickens==2.1.1',
    'dill==0.3.7',
    'matplotlib==3.8.2',
    'networkx==3.2.1',
    'numpy==1.26.2',
    'pandas==2.1.3',
    'powerplantsim==0.1.2',
    'pytest==8.0.2',
    'scikit-learn==1.3.2',
    'scipy==1.12.0'
]
description = 'An Interactive Benchmark Library'
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' },
    { name = 'University of Bologna - DISI' }
]
maintainers = [
    { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' }
]
license = { file = "LICENSE" }

[tool.hatch.build.targets.wheel]
packages = ["benchmarks", "model"]

[project.urls]
Repository = "https://github.com/giuluck/benchmark-library/"
